--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           server_type: circle
           ros_release_name: kinetic
           ubuntu_version_name: xenial
-          used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
+          used_modules: check_cache,check_build,code_style_check,check_deb_make,code_coverage
 
     steps:
       - checkout
