--- a/aws.yml
+++ b/aws.yml
@@ -1,36 +1,30 @@
 settings:
   machine_type: small
   ubuntu:
-    version: trusty
+    version: xenial
   ros:
-    release: indigo
+    release: kinetic
   docker:
     image: shadowrobot/build-tools
-    tag: trusty-indigo
+    tag: xenial-kinetic
   template_project_name: template_unit_tests_and_code_coverage
   toolset:
     modules:
       - check_cache
       - code_coverage
-
-
-trunks:
-  - name: indigo-devel
-    jobs:
-      - name: code_coverage_job
   
+trunks:
   - name: kinetic-devel
-    settings:
-       ubuntu:
-         version: xenial
-       ros:
-         release: kinetic
-       docker:
-         tag: xenial-kinetic
     jobs:
-      - name: code_coverage_job
-      - name: code_style_job
+      - name: code_coverage
+      - name: style_check
         settings:
           toolset:
             modules:
               - code_style_check
+              - check_license
+      - name: install_check
+        settings:
+          toolset:
+            modules:
+              - check_install
