--- a/shippable.yml
+++ b/shippable.yml
@@ -16,7 +16,7 @@ build:
     - export server_type="shippable"
     - export ros_release_name="kinetic"
     - export ubuntu_version_name="xenial"
-    - export used_modules="check_cache,check_build,code_style_check,check_deb_make,code_coverage"
+    - export used_modules="check_cache,check_build,code_style_check,check_install,code_coverage"
     - export remote_shell_script="https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh"
     - wget -O /tmp/oneliner "$( echo "$remote_shell_script" | sed 's/#/%23/g' )"
     - chown -R $MY_USERNAME:$MY_USERNAME $SHIPPABLE_BUILD_DIR
